# projects

application/hack-and-slash/: Cargo.toml
application/hack-and-slash/aseprite/: sheep_animated.aseprite  sheep_east.aseprite  sheep_north.aseprite  sheep_north_west.aseprite  sheep_northeast.aseprite  sheep_south.aseprite  sheep_south_west.aseprite  sheep_southeast.aseprite  sheep_west.aseprite
application/hack-and-slash/src/: main.rs
application/platform-game/: Cargo.toml
application/platform-game/src/: main.rs
experiment/markdown-site-generator/: Cargo.toml
experiment/markdown-site-generator/src/: file.rs  lib.rs  main.rs  mdast.rs
experiment/parser-generator/src/: bytes.rs  internal.rs  lib.rs  traits.rs
experiment/physics/src/: lib.rs
experiment/physics/src/classical_mechanics/: mod.rs  point_mass.rs
experiment/single-harmonic-motion/: Cargo.toml
experiment/single-harmonic-motion/src/: main.rs
experiment/terminal-multiplexer/: Cargo.toml
lib/libc-wrapper/: Cargo.toml
lib/libc-wrapper/src/: fd_set.rs  lib.rs  poll.rs  pollfd.rs  read.rs  select.rs  timeval.rs
lib/signal-manipulator/: Cargo.toml
lib/signal-manipulator/src/: lib.rs  self_pipe.rs
lib/terminal-manipulator/: Cargo.toml
lib/terminal-manipulator/src/: cursor.rs  event.rs  event_source.rs  file_descriptor.rs  lib.rs  macros.rs  parser.rs  style.rs  terminal.rs  traits.rs
tool/editor/: Cargo.toml
tool/editor/src/: main.rs
