[package]
name = "terminal-manipulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libc-wrapper = { path = "../libc-wrapper" }
signal-manipulator = { path = "../signal-manipulator" }